fix: align brand's icon

--- a/src/app/Components/home/home.css
+++ b/src/app/Components/home/home.css
@@ -159,17 +159,17 @@
     width: 90%;
     max-width: 1200px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: stretch;
     margin: 10vh auto 20vh auto;
-    gap: 1.5vw;
+    gap: 20px;
+    flex-wrap: wrap;
 }
 
 .big-brand-icon {
-    width: 100%;
-    height: 90%;
+    flex: 1 1 275px;
     max-width: 275px;
-    min-height: 380px;
+    height: auto;
     object-fit: contain;
 }
 
@@ -177,20 +177,19 @@
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    width: 100%;
-    min-width: 280px;
-    gap: 17px;
+    flex: 1 1 275px;
+    max-width: 275px;
+    gap: 40px;
 
 }
 
 .small-icons-container img {
-    margin: 0 0 0 0;
     height: 100%;
-    
+
 }
 
 .small-brand-icons {
     width: 100%;
-    flex: 1;
+    height: 180px;
     object-fit: contain;
 }
